fix visibility of input's bars

--- a/src/components/Acc/Form.module.scss
+++ b/src/components/Acc/Form.module.scss
@@ -25,6 +25,7 @@
     border: none;
     position: relative;
     transition: all 0.2s ease-in;
+    z-index: 2;
     box-shadow: 0 1rem 2rem rgba($color: #000000, $alpha: 0.4);
     &--error ~ label {
       fill: var(--color-error) !important;
@@ -38,7 +39,7 @@
       display: block;
       position: absolute;
       top: 95%;
-      z-index: -1;
+      z-index: 1;
       left: 0;
       width: 100%;
       height: 0.7rem;
@@ -53,7 +54,7 @@
       content: "";
       position: absolute;
       top: 95%;
-      z-index: -1;
+      z-index: 1;
       left: 0;
       width: 100%;
       height: 0.7rem;
