--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -11,6 +11,3 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
-body {
-  // background-color: var(--color-board-default);
-}
